Fix small devices footer alignment

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -303,7 +303,6 @@
 
 footer {
     display: flex;
-    justify-content: center;
     width: 100%;
     padding: 3.5rem 1rem;
 }
@@ -450,6 +449,10 @@ footer > div {
     }
 
     /* -----------------------------------footer---------------------------------- */
+
+    footer {
+        justify-content: center;
+    }
 
     footer > div {
         width: 100%;
