--- a/styles/home.css
+++ b/styles/home.css
@@ -370,7 +370,6 @@
 
 footer {
     display: flex;
-    justify-content: center;
     width: 100%;
     padding: 3.5rem 1rem;
 }
@@ -635,6 +634,10 @@ footer > div {
     }
 
     /* -----------------------------------footer---------------------------------- */
+
+    footer {
+        justify-content: center;
+    }
 
     footer > div {
         width: 100%;
